# asam-osi-utilities

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: spdx_check.yml
examples/: CMakeLists.txt  README.md  convert_osi2mcap.cpp  example_mcap_reader.cpp  example_mcap_writer.cpp  example_native_binary_reader.cpp  example_native_binary_writer.cpp  example_single_channel_binary_reader.cpp  example_single_channel_binary_writer.cpp  example_txth_reader.cpp  example_txth_writer.cpp
include/osi-utilities/tracefile/: Reader.h  Writer.h
include/osi-utilities/tracefile/reader/: MCAPTraceFileReader.h  NativeBinaryTraceFileReader.h  SingleChannelBinaryTraceFileReader.h  TXTHTraceFileReader.h
include/osi-utilities/tracefile/writer/: MCAPTraceFileWriter.h  NativeBinaryTraceFileWriter.h  SingleChannelBinaryTraceFileWriter.h  TXTHTraceFileWriter.h
src/: CMakeLists.txt
src/tracefile/reader/: MCAPTraceFileReader.cpp  NativeBinaryTraceFileReader.cpp  Reader.cpp  SingleChannelBinaryTraceFileReader.cpp  TXTHTraceFileReader.cpp
src/tracefile/writer/: MCAPTraceFileWriter.cpp  NativeBinaryTraceFileWriter.cpp  SingleChannelBinaryTraceFileWriter.cpp  TXTHTraceFileWriter.cpp  Writer.cpp
tests/: CMakeLists.txt
tests/src/tracefile/reader/: MCAPTraceFileReader_test.cpp  NativeBinaryTraceFileReader_test.cpp  SingleChannelBinaryTraceFileReader_test.cpp  TXTHTraceFileReader_test.cpp
tests/src/tracefile/writer/: MCAPTraceFileWriter_test.cpp  SingleChannelBinaryTraceFileWriter_test.cpp  TXTHTraceFileWriter_test.cpp
